# pxviewer

./: .gitignore  LICENSE  OBJECT_HIDE_TODO.md  README.md  THIRD_PARTY_LICENSES.md  environment.yml
conda-recipe/: bld.bat  build.sh  meta.yaml  recipe.yaml
frontend/: app.html  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: index.tsx  live.ts
python/: pyproject.toml
python/pxviewer/: __init__.py  __main__.py  api.py  api_guide.py  appserver.py  bcif.py  cctbx_io.py  console.py  data.py  demos.py  desktop.py  edits.py  geometry.py  gpu.py  hydrogens.py  kinemage.py  ligands.py  live.py  loader.py  minimize.py  mvs_builder.py  palettes.py  probe.py  reflections.py  tug.py  tutorial.py  volume.py  volume_demos.py  volume_io.py  webapp.py
python/pxviewer/data/: palettes.json  zn_site_edits.phil
python/pxviewer/validation/: __init__.py  cablam.py  cbetadev.py  omegalyze.py  rama_z.py  ramachandran.py  rotamers.py
python/scripts/: bench_live_maps.py  make_dev_fixtures.py
python/tests/: conftest.py  gui_invariants.py  test_api.py  test_api_guide.py  test_appserver.py  test_bcif.py  test_cctbx_io.py  test_console.py  test_data.py  test_demos.py  test_desktop.py  test_edits.py  test_geometry.py  test_gpu.py  test_gui_concurrency.py  test_gui_fuzz.py  test_hydrogens.py  test_kinemage.py  test_ligands.py  test_live.py  test_live_maps.py  test_loader.py  test_minimize.py  test_mvs.py  test_palettes.py  test_primitives.py  test_probe.py  test_reflections.py  test_tug.py  test_validation.py  test_volume.py  test_volume_demos.py  test_volume_io.py  test_webapp.py
scripts/: build_frontend.sh  gen_third_party_licenses.py  make_zn_site.py  setup_chem_data.sh  setup_monomer_lib.sh  setup_reference_data.sh
