[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pxviewer"
version = "0.1.0"
description = "Python API for pxviewer"
requires-python = ">=3.10"
dependencies = [
    "molviewspec>=1.8.0",
    # BinaryCIF topology is written by pxviewer.bcif, which needs only msgpack.
    "msgpack>=1.0",
    # cctbx currently supports numpy <= 2.4.
    "numpy>=1.23,<2.5",
]
# NOTE: atomic-model I/O needs cctbx (`cctbx-base`), which ships only on
# conda-forge, not PyPI — so it can't be a dependency here. Install it with conda
# (see environment.yml) or: conda install -c conda-forge cctbx-base

[project.optional-dependencies]
live = [
    "websockets>=12.0",
]
desktop = [
    "PySide6>=6.5",
    "websockets>=12.0",
]
console = [
    "qtconsole>=5.5",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pxviewer"]
# Bundled data — the sample model (pxviewer/data/1aki.pdb), the app icon and the Lucide
# tab icons (pxviewer/assets/**) — is included automatically as it lives inside the
# package directory.

[tool.pytest.ini_options]
testpaths = ["tests"]
