[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pxviewer"
version = "0.1.0"
description = "Python API for pxviewer"
requires-python = ">=3.10"
dependencies = [
    "molviewspec>=1.8.0",
    # BinaryCIF topology is written by pxviewer.bcif, which needs only msgpack.
    "msgpack>=1.0",
    # cctbx currently supports numpy <= 2.4.
    "numpy>=1.23,<2.5",
]
# NOTE: atomic-model I/O needs cctbx (`cctbx-base`) and its monomer library
# (`chem_data`), which ship only on conda channels, not PyPI — so they can't be
# dependencies here. Install with conda (see environment.yml / conda-recipe), or:
# conda install -c conda-forge -c chem_data cctbx-base chem_data

[project.scripts]
pxviewer = "pxviewer.__main__:main"

[project.optional-dependencies]
live = [
    "websockets>=12.0",
]
desktop = [
    "PySide6>=6.5",
    "websockets>=12.0",
]
console = [
    "qtconsole>=5.5",
    "ipykernel>=6.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "websockets>=12.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pxviewer"]
# Bundled data — the sample models (pxviewer/data/**), the app icon and the Lucide tab
# icons (pxviewer/assets/**) — is included automatically as it lives inside the package
# directory. The built Mol* frontend is copied to pxviewer/frontend/ at packaging time
# (scripts/build_frontend.sh then the conda recipe); it must be force-listed as an
# artifact because its build/ subdir matches a .gitignore rule hatchling would honour.
artifacts = [
    "pxviewer/frontend/**",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
